--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "massive": "^5.7.6",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
@@ -30,5 +31,5 @@
     "not op_mini all"
   ],
   "main": "server/index",
-  "proxy": "http://localhost:3113"
+  "proxy": "http://localhost:4000"
 }
